# halo-halo-plus-plus

./: .clangd  .gitignore  CMakeLists.txt  README.md  coco120.yaml  draw_bounding_box.cpp  event_keys.hpp  live_cam_object_detection.cpp  makefile  microbench.txt  preprocess_frame.cpp  pt_to_torchscript.py  types.hpp  yolo11.yaml  yolo11n-train.py
.github/workflows/: build-test-debug-failing-release.yml  build.yml  mac13-x86-64.yml  win-clang.yml  win-gcc.yml
src/: .clangd  benchmark.cpp  benchmark.hpp  draw_bounding_box.cpp  event_keys.cpp  get_cameras.cpp  get_cameras.hpp  get_class_color.cpp  get_class_color.hpp  live_cam_motion_detection.cpp  live_cam_object_detection.cpp  logger.cpp  logger.hpp  preprocess_frame.hpp
